<resources>
    <string name="app_name">Android</string>
    <string name="search">搜索</string>
    <string name="mine">我的</string>
    <string name="find">发现</string>
    <string name="created_menu">创建的歌单</string>
    <string name="saved_menu">收藏的歌单</string>
    <string name="faxian_mrtj">每日推荐</string>
    <string name="faxian_gd">歌单</string>
    <string name="faxian_phb">排行榜</string>
    <string name="faxian_dt">电台</string>
    <string name="faxian_zb">直播</string>
    <string name="faxian_tjgd">推荐歌单</string>
    <string name="faxian_gdgc">歌单广场</string>
<<<<<<< HEAD
    <string name="yuncun">云村</string>
=======



>>>>>>> master
</resources>
