<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            android:theme="@style/AppTheme.AppBarOverlay">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/left_ui" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/mine_title"
                        android:text="@string/mine"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="110dp"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/find_title"
                        android:text="@string/find"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="34dp"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        />
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/search"
                        android:layout_marginStart="110dp"
                        android:layout_gravity="start"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>



        <com.youth.banner.Banner
            android:id="@+id/banner_faxian"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="75dp"
            >

        </com.youth.banner.Banner>

        <ImageView
            android:id="@+id/image_mrtj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/mrtj"
            android:layout_marginTop="265dp"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:id="@+id/textView_mrtj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faxian_mrtj"
            android:layout_marginTop="330dp"
            android:layout_marginLeft="18dp"
            />

        <ImageView
            android:id="@+id/image_gd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/gedan"
            android:layout_marginTop="265dp"
            android:layout_marginLeft="90dp"
            />
        <TextView
            android:id="@+id/textView_gd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faxian_gd"
            android:layout_marginTop="330dp"
            android:layout_marginLeft="105dp"
            />

        <ImageView
            android:id="@+id/image_phb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/phb"
            android:layout_marginTop="265dp"
            android:layout_marginLeft="170dp"
            />
        <TextView
            android:id="@+id/textView_phb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faxian_phb"
            android:layout_marginTop="330dp"
            android:layout_marginLeft="180dp"
            />

        <ImageView
            android:id="@+id/image_dt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/dt"
            android:layout_marginTop="265dp"
            android:layout_marginLeft="250dp"
            />
        <TextView
            android:id="@+id/textView_dt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faxian_dt"
            android:layout_marginTop="330dp"
            android:layout_marginLeft="268dp"
            />

        <ImageView
            android:id="@+id/image_zb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/zhibo"
            android:layout_marginTop="265dp"
            android:layout_marginLeft="330dp"
            />
        <TextView
            android:id="@+id/textView_zb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faxian_zb"
            android:layout_marginTop="330dp"
            android:layout_marginLeft="347dp"
            />

        <TextView
            android:id="@+id/textView_tjgd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faxian_tjgd"
            android:layout_marginTop="370dp"
            android:layout_marginLeft="10dp"
            android:textSize="18dp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginLeft="310dp"
            android:layout_marginTop="365dp"
            android:background="#00FFFFFF"
            android:text="@string/faxian_gdgc"
            android:textSize="13dp" />

        <GridView
            android:id="@+id/gridview_tjgd"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="400dp"

            />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.drawerlayout.widget.DrawerLayout>
